ProductsStoreonKubernetes/kubernetes/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  #   nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
  #   nginx.ingress.kubernetes.io/proxy-body-size: 32m
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: frontend.20.31.94.159.nip.io
      http:
        paths:
        - path: /webapp1(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: webapp1-svc
              port:
                number: 80
        - path: /webapp2(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: webapp2-svc
              port:
                number: 80

  # - host: "frontend.20.101.0.105.nip.io"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/webapp1(/|$)(.*)"
  #       backend:
  #         service:
  #           name: webapp1-svc
  #           port:
  #             number: 80
  # - host: "frontend.20.101.0.105.nip.io"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/webapp1(/|$)(.*)"
  #       backend:
  #         service:
  #           name: webapp2-svc
  #           port:
  #             number: 80
