ProductsStoreonKubernetes/kubernetes/ingress/app-ingress2.yaml
apiVersion: networking.k8s.io/v1 #extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
    # nginx.ingress.kubernetes.io/proxy-body-size: 32m
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: webapp1-svc
          servicePort: 80
        path: /webapp1(/|$)(.*)
      - backend:
          serviceName: webapp2-svc
          servicePort: 80
        path: /webapp2(/|$)(.*)
  - host: frontend.20.76.15.90.nip.io # change the IP address here
    http:
      paths:
      - backend:
          serviceName: webapp1-svc
          servicePort: 80
        path: /webapp1
      - backend:
          serviceName: webapp2-svc
          servicePort: 80
        path: /webapp2
